WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159286
[JSC] Minor TypedArray fixes
https://bugs.webkit.org/show_bug.cgi?id=159286
Summary
[JSC] Minor TypedArray fixes
Benjamin Poulain
Reported
2016-06-29 17:50:42 PDT
[JSC] Minor TypedArray fixes
Attachments
Patch
(41.65 KB, patch)
2016-06-29 18:03 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews114 for mac-yosemite
(581.60 KB, application/zip)
2016-06-29 18:45 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews102 for mac-yosemite
(798.51 KB, application/zip)
2016-06-29 18:50 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews104 for mac-yosemite-wk2
(852.89 KB, application/zip)
2016-06-29 18:54 PDT
,
Build Bot
no flags
Details
Archive of layout-test-results from ews125 for ios-simulator-wk2
(651.00 KB, application/zip)
2016-06-29 19:01 PDT
,
Build Bot
no flags
Details
Patch for landing
(44.31 KB, patch)
2016-06-29 20:49 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Patch
(43.98 KB, patch)
2016-06-29 20:52 PDT
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2016-06-29 18:03:40 PDT
Created
attachment 282399
[details]
Patch
Build Bot
Comment 2
2016-06-29 18:45:22 PDT
Comment on
attachment 282399
[details]
Patch
Attachment 282399
[details]
did not pass mac-debug-ews (mac): Output:
http://webkit-queues.webkit.org/results/1597439
Number of test failures exceeded the failure limit.
Build Bot
Comment 3
2016-06-29 18:45:25 PDT
Created
attachment 282403
[details]
Archive of layout-test-results from ews114 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews114 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 4
2016-06-29 18:50:36 PDT
Comment on
attachment 282399
[details]
Patch
Attachment 282399
[details]
did not pass mac-ews (mac): Output:
http://webkit-queues.webkit.org/results/1597451
New failing tests: js/dom/constructor-length.html
Build Bot
Comment 5
2016-06-29 18:50:39 PDT
Created
attachment 282404
[details]
Archive of layout-test-results from ews102 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 6
2016-06-29 18:54:50 PDT
Comment on
attachment 282399
[details]
Patch
Attachment 282399
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.webkit.org/results/1597464
New failing tests: js/dom/constructor-length.html
Build Bot
Comment 7
2016-06-29 18:54:53 PDT
Created
attachment 282406
[details]
Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Build Bot
Comment 8
2016-06-29 19:01:12 PDT
Comment on
attachment 282399
[details]
Patch
Attachment 282399
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/1597467
New failing tests: js/dom/constructor-length.html
Build Bot
Comment 9
2016-06-29 19:01:15 PDT
Created
attachment 282408
[details]
Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Keith Miller
Comment 10
2016-06-29 19:52:05 PDT
Comment on
attachment 282399
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282399&action=review
r=me with comment. Assuming the other failing test is just a rebaseline.
> Source/JavaScriptCore/runtime/JSTypedArrayViewPrototype.cpp:77 > JSArrayBufferView* thisObject = jsDynamicCast<JSArrayBufferView*>(exec->argument(0)); > - if (!thisObject) > + if (!thisObject || thisObject->mode() == DataViewMode) > return throwVMError(exec, createTypeError(exec, "Receiver should be a typed array view"));
I think this would be better as: if (!exec->argument(0).isCell() || !isTypedView(exec->argument(0).asCell()->type())) return throwVMError(exec, createTypeError(exec, "Receiver should be a typed array view")); JSArrayBufferView* thisObject = jsCast<JSArrayBufferView*>(exec->argument(0));
Keith Miller
Comment 11
2016-06-29 19:54:15 PDT
Comment on
attachment 282399
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282399&action=review
>> Source/JavaScriptCore/runtime/JSTypedArrayViewPrototype.cpp:77 >> return throwVMError(exec, createTypeError(exec, "Receiver should be a typed array view")); > > I think this would be better as: > > if (!exec->argument(0).isCell() || !isTypedView(exec->argument(0).asCell()->type())) > return throwVMError(exec, createTypeError(exec, "Receiver should be a typed array view")); > > JSArrayBufferView* thisObject = jsCast<JSArrayBufferView*>(exec->argument(0));
actually I think the return can be: return throwVMTypeError(exec, "Receiver should be a typed array view");
Benjamin Poulain
Comment 12
2016-06-29 20:49:06 PDT
Created
attachment 282411
[details]
Patch for landing
Benjamin Poulain
Comment 13
2016-06-29 20:49:40 PDT
Comment on
attachment 282411
[details]
Patch for landing WTF WebKit-patch :(
Benjamin Poulain
Comment 14
2016-06-29 20:52:36 PDT
Created
attachment 282412
[details]
Patch
WebKit Commit Bot
Comment 15
2016-06-29 21:25:16 PDT
Comment on
attachment 282412
[details]
Patch Clearing flags on attachment: 282412 Committed
r202667
: <
http://trac.webkit.org/changeset/202667
>
WebKit Commit Bot
Comment 16
2016-06-29 21:25:21 PDT
All reviewed patches have been landed. Closing bug.
Joseph Pecoraro
Comment 17
2016-06-29 21:31:56 PDT
Comment on
attachment 282412
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282412&action=review
> LayoutTests/platform/mac/js/dom/constructor-length-expected.txt:45 > -PASS Uint16Array.length is 3 > -PASS Uint32Array.length is 3 > -PASS Uint8Array.length is 3 > -PASS Uint8ClampedArray.length is 3 > +FAIL Uint16Array.length should be 3. Was 0. > +FAIL Uint32Array.length should be 3. Was 0. > +FAIL Uint8Array.length should be 3. Was 0. > +FAIL Uint8ClampedArray.length should be 3. Was 0.
These are FAILs. Probably should update the test to expect 0?
Benjamin Poulain
Comment 18
2016-06-29 21:58:18 PDT
(In reply to
comment #17
)
> These are FAILs. Probably should update the test to expect 0?
Duh! I did a rebaseline without looking at the result. I'll fix that.
Benjamin Poulain
Comment 19
2016-06-29 22:10:48 PDT
Follow up:
http://trac.webkit.org/changeset/202672
Csaba Osztrogonác
Comment 20
2016-06-30 01:10:06 PDT
(In reply to
comment #15
)
> Comment on
attachment 282412
[details]
> Patch > > Clearing flags on attachment: 282412 > > Committed
r202667
: <
http://trac.webkit.org/changeset/202667
>
This patch ( or
bug159285
) made many JSC tests assert:
https://build.webkit.org/builders/Apple%20El%20Capitan%20Debug%20JSC%20%28Tests%29/builds/3307
Csaba Osztrogonác
Comment 21
2016-06-30 08:45:07 PDT
Just to document, fixed by
https://trac.webkit.org/changeset/202673
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug