LayoutTests/js/script-tests/typedarray-constructors.js
@@ -3,33 +3,25 @@ description(
 'In particular, makes sure that you use the "new" keyword when using the constructors.'
 );
 
-shouldThrow("Int8Array()");
-shouldNotThrow("new Int8Array()");
+let arrayTypes = [
+    Int8Array,
+    Int16Array,
+    Int32Array,
+    Uint8Array,
+    Uint8ClampedArray,
+    Uint16Array,
+    Uint32Array,
+    Float32Array,
+    Float64Array,
+];
 
-shouldThrow("Int16Array()");
-shouldNotThrow("new Int16Array()");
-
-shouldThrow("Int32Array()");
-shouldNotThrow("new Int32Array()");
-
-shouldThrow("Uint8Array()");
-shouldNotThrow("new Uint8Array()");
-
-shouldThrow("Uint16Array()");
-shouldNotThrow("new Uint16Array()");
-
-shouldThrow("Uint32Array()");
-shouldNotThrow("new Uint32Array()");
-
-shouldThrow("Uint8ClampedArray()");
-shouldNotThrow("new Uint8ClampedArray()");
-
-shouldThrow("Float32Array()");
-shouldNotThrow("new Float32Array()");
-
-shouldThrow("Float64Array()");
-shouldNotThrow("new Float64Array()");
+// The prototype should be the same for every type of view.
+for (let arrayType of arrayTypes) {
+    shouldThrow("" + arrayType.name + "()");
+    shouldNotThrow("new " + arrayType.name + "()");
+    shouldBe("" + arrayType.name + ".length", "0");
+}
 
 shouldThrow("DataView(new ArrayBuffer())");
 shouldNotThrow("new DataView(new ArrayBuffer())");
-
+shouldBe("DataView.length", "0");
